@@ -14,167 +14,110 @@ This is a {{ site.pmd.release_type }} release.
 
 ### New and noteworthy
 
-#### Java 18 Support
+#### PMD User Survey
 
-This release of PMD brings support for Java 18. There are no new standard language features.
+Help shape the future of PMD by telling us how you use it.
 
-PMD also supports [JEP 420: Pattern Matching for switch (Second Preview)](https://openjdk.java.net/jeps/420) as a
-preview language feature. In order to analyze a project with PMD that uses these language features,
-you'll need to enable it via the environment variable `PMD_JAVA_OPTS` and select the new language
-version `18-preview`:
+Our little survey is still open in case you didn't participate yet.
+Please participate in our survey at <https://forms.gle/4d8r1a1RDzfixHDc7>.
 
-    export PMD_JAVA_OPTS=--enable-preview
-    ./run.sh pmd -language java -version 18-preview ...
+Thank you!
 
-Note: Support for Java 16 preview language features have been removed. The version "16-preview" is no longer available.
+#### Support for HTML
 
-#### Better XML XPath support
+This version of PMD ships a new language module to support analyzing of HTML.
+Support for HTML is experimental and might change without notice.
+The language implementation is not complete yet and the AST doesn't look
+well for text nodes and comment nodes and might be changed in the future.
+You can write your own rules, but we don't guarantee that the rules work with
+the next (minor) version of PMD without adjustments.
 
-The new rule class {% jdoc xml::lang.xml.rule.DomXPathRule %} is intended to replace
-usage of the `XPathRule` for XML rules. This rule executes the XPath query in a different
-way, which sticks to the XPath specification. This means the expression is interpreted
-the same way in PMD as in all other XPath development tools that stick to the standard.
-You can for instance test the expression in an online XPath editor.
+Please give us feedback about how practical this new language is in
+[discussions](https://github.com/pmd/pmd/discussions). Please report
+missing features or bugs as new [issues](https://github.com/pmd/pmd/issues).
 
-Prefer using this class to define XPath rules: replace the value of the `class`
-attribute with `net.sourceforge.pmd.lang.xml.rule.DomXPathRule` like so:
+#### New rules
+
+* The HTML rule {% rule html/bestpractices/AvoidInlineStyles %} finds elements which use a style attribute.
+  In order to help maintaining a webpage it is considered good practice to separate content and styles. Instead
+  of inline styles one should use CSS files and classes.
+
 ```xml
-<rule name="MyXPathRule"
-      language="xml"
-      message="A message"
-      class="net.sourceforge.pmd.lang.xml.rule.DomXPathRule">
-
-      <properties>
-        <property name="xpath">
-            <value><![CDATA[
-            /a/b/c[@attr = "5"]
-            ]]></value>
-        </property>
-        <!-- Note: the property "version" is ignored, remove it. The query is XPath 2. -->
-      </properties>
-</rule>
+    <rule ref="category/html/bestpractices.xml/AvoidInlineStyles" />
 ```
 
-The rule is more powerful than `XPathRule`, as it can now handle XML namespaces,
-comments and processing instructions. Please refer to the Javadoc of {% jdoc xml::lang.xml.rule.DomXPathRule %}
-for information about the differences with `XPathRule` and examples.
+* The HTML rule {% rule html/bestpractices/UnnecessaryTypeAttribute %} finds "link" and "script" elements which
+  still have a "type" attribute. This is not necessary anymore since modern browsers automatically use CSS and
+  JavaScript.
 
-`XPathRule` is still perfectly supported for all other languages, including Apex and Java.
-
-#### New XPath functions
-
-The new XPath functions `pmd:startLine`, `pmd:endLine`, `pmd:startColumn`,
-and `pmd:endColumn` are now available in XPath rules for all languages. They
-replace the node attributes `@BeginLine`, `@EndLine` and such. These attributes
-will be deprecated in a future release.
-
-Please refer to [the documentation](https://pmd.github.io/latest/pmd_userdocs_extending_writing_xpath_rules.html#pmd-extension-functions) of these functions for more information, including usage samples.
-
-Note that the function `pmd:endColumn` returns an exclusive index, while the
-attribute `@EndColumn` is inclusive. This is for forward compatibility with PMD 7,
-which uses exclusive end indices.
-
-#### New programmatic API
-
-This release introduces a new programmatic API to replace the inflexible {% jdoc core::PMD %} class.
-Programmatic execution of PMD should now be done with a {% jdoc core::PMDConfiguration %}
-and a {% jdoc core::PmdAnalysis %}, for instance:
-
-```java
-PMDConfiguration config = new PMDConfiguration();
-config.setDefaultLanguageVersion(LanguageRegistry.findLanguageByTerseName("java").getVersion("11"));
-config.setInputPaths("src/main/java");
-config.prependAuxClasspath("target/classes");
-config.setMinimumPriority(RulePriority.HIGH);
-config.addRuleSet("rulesets/java/quickstart.xml");
-config.setReportFormat("xml");
-config.setReportFile("target/pmd-report.xml");
-
-try (PmdAnalysis pmd = PmdAnalysis.create(config)) {
-    // note: don't use `config` once a PmdAnalysis has been created.
-    // optional: add more rulesets
-    pmd.addRuleSet(pmd.newRuleSetLoader().loadFromResource("custom-ruleset.xml"));
-    // optional: add more files
-    pmd.files().addFile(Paths.get("src", "main", "more-java", "ExtraSource.java"));
-    // optional: add more renderers
-    pmd.addRenderer(renderer);
-
-    // or just call PMD
-    pmd.performAnalysis();
-}
+```xml
+      <rule ref="category/html/bestpractices.xml/UnnecessaryTypeAttribute" />
 ```
 
-The `PMD` class still supports methods related to CLI execution: `runPmd` and `main`.
-All other members are now deprecated for removal.
-The CLI itself remains compatible, if you run PMD via command-line, no action is required on your part.
+* The HTML rule {% rule html/bestpractices/UseAltAttributeForImages %} finds "img" elements without an "alt"
+  attribute. An alternate text should always be provided in order to help screen readers.
+
+```xml
+      <rule ref="category/html/bestpractices.xml/UseAltAttributeForImages" />
+```
+
+#### Modified rules
+
+*   The Java rule {% rule java/bestpractices/UnusedPrivateField %} has a new property `ignoredFieldNames`.
+    The default ignores serialization-specific fields (eg `serialVersionUID`).
+    The property can be used to ignore more fields based on their name.
+    Note that the rule used to ignore fields named `IDENT`, but doesn't anymore (add this value to the property to restore the old behaviour).
 
 ### Fixed Issues
-
-*   apex
-    *   [#3817](https://github.com/pmd/pmd/pull/3817): \[apex] Add designer bindings to display main attributes
-*   apex-performance
-    *   [#3773](https://github.com/pmd/pmd/pull/3773): \[apex] EagerlyLoadedDescribeSObjectResult false positives with SObjectField.getDescribe()
-*   core
-    *   [#2693](https://github.com/pmd/pmd/issues/2693): \[ci] Add integration tests with real open-source projects
-    *   [#3299](https://github.com/pmd/pmd/issues/3299): \[core] Deprecate system properties of PMDCommandLineInterface
-*   java
-    *   [#3809](https://github.com/pmd/pmd/issues/3809): \[java] Support JDK 18
-*   doc
-    *   [#2504](https://github.com/pmd/pmd/issues/2504): \[doc] Improve "Edit me on github" button
-    *   [#3812](https://github.com/pmd/pmd/issues/3812): \[doc] Documentation website table of contents broken on pages with many subheadings
-*   java-design
-    *   [#3850](https://github.com/pmd/pmd/issues/3850): \[java] ImmutableField - false negative when field assigned in constructor conditionally
-    *   [#3851](https://github.com/pmd/pmd/issues/3851): \[java] ClassWithOnlyPrivateConstructorsShouldBeFinal - false negative when a compilation unit contains two class declarations
-*   xml
-    *   [#2766](https://github.com/pmd/pmd/issues/2766): \[xml] XMLNS prefix is not pre-declared in xpath query
-    *   [#3863](https://github.com/pmd/pmd/issues/3863): \[xml] Make XPath rules work exactly as in the XPath spec
+* core
+  * [#3792](https://github.com/pmd/pmd/issues/3792): \[core] Allow to filter violations in Report
+  * [#3881](https://github.com/pmd/pmd/issues/3881): \[core] SARIF renderer depends on platform default encoding
+  * [#3882](https://github.com/pmd/pmd/pull/3882): \[core] Fix AssertionError about exhaustive switch
+  * [#3884](https://github.com/pmd/pmd/issues/3884): \[core] XML report via ant task contains XML header twice
+  * [#3896](https://github.com/pmd/pmd/pull/3896): \[core] Fix ast-dump CLI when reading from stdin
+* doc
+  * [#2505](https://github.com/pmd/pmd/issues/2505): \[doc] Improve side bar to show release date
+* java
+  * [#3068](https://github.com/pmd/pmd/issues/3068): \[java] Some tests should not depend on real rules
+  * [#3889](https://github.com/pmd/pmd/pull/3889): \[java] Catch LinkageError in UselessOverridingMethodRule
+* java-bestpractices
+  * [#3910](https://github.com/pmd/pmd/pull/3910): \[java] UnusedPrivateField - Allow the ignored fieldnames to be configurable
+  * [#1185](https://github.com/pmd/pmd/issues/1185): \[java] ArrayIsStoredDirectly false positive with field access
+  * [#1474](https://github.com/pmd/pmd/issues/1474): \[java] ArrayIsStoredDirectly false positive with method call
+  * [#3879](https://github.com/pmd/pmd/issues/3879) \[java] ArrayIsStoredDirectly reports duplicated violation
+  * [#3929](https://github.com/pmd/pmd/issues/3929): \[java] ArrayIsStoredDirectly should report the assignment rather than formal parameter
+* java-design
+  * [#3603](https://github.com/pmd/pmd/issues/3603): \[java] SimplifiedTernary: no violation for 'condition ? true : false' case
+* java-performance
+  * [#3867](https://github.com/pmd/pmd/issues/3867): \[java] UseArraysAsList with method call
+* plsql
+  * [#3687](https://github.com/pmd/pmd/issues/3687): \[plsql] Parsing exception EXECUTE IMMEDIATE l_sql BULK COLLECT INTO statement
+  * [#3706](https://github.com/pmd/pmd/issues/3706): \[plsql] Parsing exception CURSOR statement with parenthesis groupings
 
 ### API Changes
 
-#### Deprecated API
-
-* Several members of {% jdoc core::PMD %} have been newly deprecated, including:
-  - `PMD#EOL`: use `System#lineSeparator()`
-  - `PMD#SUPPRESS_MARKER`: use {% jdoc core::PMDConfiguration#DEFAULT_SUPPRESS_MARKER %}
-  - `PMD#processFiles`: use the [new programmatic API](#new-programmatic-api)
-  - `PMD#getApplicableFiles`: is internal
-* {% jdoc !!core::PMDConfiguration#prependClasspath(java.lang.String) %} is deprecated
-  in favour of {% jdoc core::PMDConfiguration#prependAuxClasspath(java.lang.String) %}.
-* {% jdoc !!core::PMDConfiguration#setRuleSets(java.lang.String) %} and
-  {% jdoc core::PMDConfiguration#getRuleSets() %} are deprecated. Use instead
-  {% jdoc core::PMDConfiguration#setRuleSets(java.util.List) %},
-  {% jdoc core::PMDConfiguration#addRuleSet(java.lang.String) %},
-  and {% jdoc core::PMDConfiguration#getRuleSetPaths() %}.
-* Several members of {% jdoc test::cli.BaseCLITest %} have been deprecated with replacements.
-* Several members of {% jdoc core::cli.PMDCommandLineInterface %} have been explicitly deprecated.
-  The whole class however was deprecated long ago already with 6.30.0. It is internal API and should
-  not be used.
-
-* In modelica, the rule classes {% jdoc modelica::lang.modelica.rule.AmbiguousResolutionRule %}
-  and {% jdoc modelica::lang.modelica.rule.ConnectUsingNonConnector %} have been deprecated,
-  since they didn't comply to the usual rule class naming conventions yet.
-  The replacements are in the subpackage `bestpractices`.
-
 #### Experimental APIs
 
-*   Together with the [new programmatic API](#new-programmatic-api) the interface
-    {% jdoc core::lang.document.TextFile %} has been added as *experimental*. It intends
-    to replace {% jdoc core::util.datasource.DataSource %} and {% jdoc core::cpd.SourceCode %} in the long term.
-    
-    This interface will change in PMD 7 to support read/write operations
-    and other things. You don't need to use it in PMD 6, as {% jdoc core::lang.document.FileCollector %}
-    decouples you from this. A file collector is available through {% jdoc !!core::PmdAnalysis#files() %}.
+* Report has two new methods which allow limited mutations of a given report:
+  * {% jdoc !!core::Report#filterViolations(net.sourceforge.pmd.util.Predicate) %} creates a new report with
+    some violations removed with a given predicate based filter.
+  * {% jdoc !!core::Report#union(net.sourceforge.pmd.Report) %} can combine two reports into a single new Report.
+* {% jdoc !!core::util.Predicate %} will be replaced in PMD7 with the standard Predicate interface from java8.
+* The module `pmd-html` is entirely experimental right now. Anything in the package
+  `net.sourceforge.pmd.lang.html` should be used cautiously.
 
 ### External Contributions
-
-*   [#3773](https://github.com/pmd/pmd/pull/3773): \[apex] EagerlyLoadedDescribeSObjectResult false positives with SObjectField.getDescribe() - [@filiprafalowicz](https://github.com/filiprafalowicz)
-*   [#3811](https://github.com/pmd/pmd/pull/3811): \[doc] Improve "Edit me on github" button - [@btjiong](https://github.com/btjiong)
-*   [#3836](https://github.com/pmd/pmd/pull/3836): \[doc] Make TOC scrollable when too many subheadings - [@JerritEic](https://github.com/JerritEic)
+* [#3883](https://github.com/pmd/pmd/pull/3883): \[doc] Improve side bar by Adding Release Date - [@jasonqiu98](https://github.com/jasonqiu98)
+* [#3910](https://github.com/pmd/pmd/pull/3910): \[java] UnusedPrivateField - Allow the ignored fieldnames to be configurable - [@laoseth](https://github.com/laoseth)
+* [#3928](https://github.com/pmd/pmd/pull/3928): \[plsql] Fix plsql parsing error in parenthesis groups - [@LiGaOg](https://github.com/LiGaOg)
+* [#3935](https://github.com/pmd/pmd/pull/3935): \[plsql] Fix parser exception in EXECUTE IMMEDIATE BULK COLLECT #3687 - [@Scrsloota](https://github.com/Scrsloota)
+* [#3938](https://github.com/pmd/pmd/pull/3938): \[java] Modify SimplifiedTernary to meet the missing case #3603 - [@VoidxHoshi](https://github.com/VoidxHoshi)
+* [#3943](https://github.com/pmd/pmd/pull/3943): chore: Set permissions for GitHub actions - [@naveensrinivasan](https://github.com/naveensrinivasan)
 
 ### Stats
-* 124 commits
-* 23 closed tickets & PRs
-* Days since last release: 29
+* 97 commits
+* 31 closed tickets & PRs
+* Days since last release: 33
 
 {% endtocmaker %}
 
